[tool.poetry]
name = "htmxdemos"
version = "0.1.0"
description = "This repository contains the example code and slides for the talk 'Server-Side is Dead! Long Live Server-Side (+ HTMX)', given at DjangoCon US 2021"
authors = ["Jack Linke <jack@watervize.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
